--- a/qcodesplusplus/plotting/offline/design.ui
+++ b/qcodesplusplus/plotting/offline/design.ui
@@ -1019,14 +1019,7 @@
        </layout>
       </item>
       <item>
-       <layout class="QGridLayout" name="view_layout" rowstretch="0" columnstretch="0,0,0,0,0,0,0,0,0,0,0,0,0,0,0" columnminimumwidth="0,0,0,0,0,0,0,0,0,0,0,0,0,0,0">
-        <item row="0" column="4">
-         <widget class="QCheckBox" name="mid_checkbox">
-          <property name="text">
-           <string>Mid</string>
-          </property>
-         </widget>
-        </item>
+       <layout class="QGridLayout" name="view_layout" rowstretch="0" columnstretch="0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0" columnminimumwidth="0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0">
         <item row="0" column="3">
          <widget class="QLineEdit" name="min_line_edit">
           <property name="enabled">
@@ -1105,6 +1098,13 @@
           </property>
          </widget>
         </item>
+        <item row="0" column="4">
+         <widget class="QCheckBox" name="mid_checkbox">
+          <property name="text">
+           <string>Mid</string>
+          </property>
+         </widget>
+        </item>
         <item row="0" column="2">
          <widget class="QLabel" name="min_label">
           <property name="sizePolicy">
@@ -1118,6 +1118,13 @@
           </property>
          </widget>
         </item>
+        <item row="0" column="8">
+         <widget class="QCheckBox" name="lock_checkbox">
+          <property name="text">
+           <string>Lock</string>
+          </property>
+         </widget>
+        </item>
         <item row="0" column="6">
          <widget class="QLabel" name="max_label">
           <property name="sizePolicy">
@@ -1128,13 +1135,6 @@
           </property>
           <property name="text">
            <string>Max</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="8">
-         <widget class="QCheckBox" name="lock_checkbox">
-          <property name="text">
-           <string>Lock</string>
           </property>
          </widget>
         </item>
@@ -1171,14 +1171,21 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="14">
+        <item row="0" column="1">
+         <widget class="QLabel" name="colorbar_label">
+          <property name="text">
+           <string>Colorbar:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="15">
          <widget class="QPushButton" name="paste_view_button">
           <property name="text">
            <string>Paste cbar</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="12">
+        <item row="0" column="13">
          <widget class="QPushButton" name="copy_view_button">
           <property name="text">
            <string>Copy cbar</string>
@@ -1198,17 +1205,20 @@
           </property>
          </spacer>
         </item>
-        <item row="0" column="1">
-         <widget class="QLabel" name="colorbar_label">
-          <property name="text">
-           <string>Colorbar:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="13">
+        <item row="0" column="14">
          <widget class="QPushButton" name="reset_limits_button">
           <property name="text">
            <string>Reset cbar</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="12">
+         <widget class="QCheckBox" name="cbar_hist_checkbox">
+          <property name="text">
+           <string>Histogram</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
