--- a/qcodesplusplus/plotting/offline/design.ui
+++ b/qcodesplusplus/plotting/offline/design.ui
@@ -688,7 +688,7 @@
            </sizepolicy>
           </property>
           <property name="text">
-           <string>Show Metadata</string>
+           <string>View Metadata</string>
           </property>
          </widget>
         </item>
