--- a/qcodesplusplus/qcpp_plotting/offline/design.ui
+++ b/qcodesplusplus/qcpp_plotting/offline/design.ui
@@ -680,6 +680,13 @@
          </spacer>
         </item>
         <item>
+         <widget class="QPushButton" name="stats_button">
+          <property name="text">
+           <string>2D statistics</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="QPushButton" name="metadata_button">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -1234,7 +1241,7 @@
      <x>0</x>
      <y>0</y>
      <width>1403</width>
-     <height>22</height>
+     <height>18</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_save_session">
