--- a/qcodespp/plotting/offline/design.ui
+++ b/qcodespp/plotting/offline/design.ui
@@ -386,7 +386,7 @@
               </size>
              </property>
              <property name="text">
-              <string>Load</string>
+              <string>Load Filters</string>
              </property>
             </widget>
            </item>
@@ -1250,7 +1250,7 @@
      <x>0</x>
      <y>0</y>
      <width>1659</width>
-     <height>22</height>
+     <height>18</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_save_session">
