IG: legend available for 1D traces. Saves and loads

--- a/qcodespp/plotting/offline/design.ui
+++ b/qcodespp/plotting/offline/design.ui
@@ -610,6 +610,13 @@
          </widget>
         </item>
         <item>
+         <widget class="QCheckBox" name="legend_checkbox">
+          <property name="text">
+           <string>Show legend</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="QCheckBox" name="show_2d_data_checkbox">
           <property name="text">
            <string>Show 2D data</string>
