--- a/qcodespp/plotting/offline/design.ui
+++ b/qcodespp/plotting/offline/design.ui
@@ -1321,6 +1321,7 @@
     <addaction name="action_unlink_folder"/>
     <addaction name="action_refresh"/>
     <addaction name="action_track_data"/>
+    <addaction name="action_set_refresh_intervals"/>
     <addaction name="separator"/>
     <addaction name="action_save_session"/>
     <addaction name="action_save_session_as"/>
@@ -1654,6 +1655,11 @@
   <action name="action_save_session_as">
    <property name="text">
     <string>Save session as</string>
+   </property>
+  </action>
+  <action name="action_set_refresh_intervals">
+   <property name="text">
+    <string>Set refresh intervals</string>
    </property>
   </action>
  </widget>
